# openfang

./: .gitignore  Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  lib.rs  redact.rs  routes.rs  server.rs  types.rs  ws.rs
crates/openfang-channels/src/: dialogue_proxy.rs  lib.rs  types.rs
crates/openfang-cli/src/: main.rs
crates/openfang-cli/src/tui/: chat_runner.rs  event.rs  mod.rs
crates/openfang-extensions/src/: registry.rs
crates/openfang-hands/src/: lib.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: config_reload.rs  heartbeat.rs  kernel.rs  registry.rs
crates/openfang-memory/: Cargo.toml
crates/openfang-memory/src/: hindsight.rs  lib.rs  substrate.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  kernel_handle.rs  lib.rs  llm_driver.rs  mcp.rs  mcp_auth.rs  prompt_builder.rs  secret_registry.rs  tool_runner.rs
crates/openfang-runtime/src/drivers/: anthropic.rs  openai.rs
crates/openfang-runtime/src/ptc/: executor.rs  ipc_server.rs  mod.rs  sdk_generator.rs
crates/openfang-skills/src/: lib.rs  verify.rs
crates/openfang-types/src/: agent.rs  config.rs
