[package]
name = "openfang-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the OpenFang Agent OS"

[features]
default = []
hindsight = ["dep:hindsight-client", "dep:reqwest"]

[dependencies]
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Optional: Hindsight semantic memory backend
hindsight-client = { git = "https://github.com/BaseDatum/hindsight.git", branch = "feat/per-tenant-llm-credentials", optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
